# VapourSynth-VMAF

./: .gitattributes  LICENSE  Makefile.am  README.md  configure.ac  meson.build
VMAF/: VMAF.cpp  VMAF.vcxproj  VMAF.vcxproj.filters
